--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
             <h1>Share your thoughts</h1>
             <h2> With your friends.</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit dolor doloribus voluptatem aperiam vel consequuntur fugit distinctio quam unde deleniti.</p>
-            <a href="/home">Get started</a>
+            <a href="/register">Get started</a>
         </div>
         <div class="image">
             <img src="/image/Secret.svg" alt="">
