Add Google authentication

--- a/home.html
+++ b/home.html
@@ -17,16 +17,16 @@
         <div class="nav-btn">
             <ul class="nav">
                 <li>
-                    <a href="#">Home</a>
+                    <a href="/">Home</a>
                 </li>
                 <li>
                     <a href="#">Blog</a>
                 </li>
                 <li>
-                    <a href="#">Contect</a>
+                    <a href="/contact">Contect</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="/about">About</a>
                 </li>
               </ul>
         </div>
